crates/ruff_python_parser/tests/snapshots/invalid_syntax@named_expression_in_class_body_comprehension.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/named_expression_in_class_body_comprehension.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..88,
        body: [
            ClassDef(
                StmtClassDef {
                    node_index: NodeIndex(None),
                    range: 0..87,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("C"),
                        range: 6..7,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    arguments: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 13..41,
                                value: ListComp(
                                    ExprListComp {
                                        node_index: NodeIndex(None),
                                        range: 13..41,
                                        elt: Named(
                                            ExprNamed {
                                                node_index: NodeIndex(None),
                                                range: 15..21,
                                                target: Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 15..16,
                                                        id: Name("x"),
                                                        ctx: Store,
                                                    },
                                                ),
                                                value: Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 20..21,
                                                        id: Name("y"),
                                                        ctx: Load,
                                                    },
                                                ),
                                            },
                                        ),
                                        generators: [
                                            Comprehension {
                                                range: 23..40,
                                                node_index: NodeIndex(None),
                                                target: Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 27..28,
                                                        id: Name("y"),
                                                        ctx: Store,
                                                    },
                                                ),
                                                iter: Call(
                                                    ExprCall {
                                                        node_index: NodeIndex(None),
                                                        range: 32..40,
                                                        func: Name(
                                                            ExprName {
                                                                node_index: NodeIndex(None),
                                                                range: 32..37,
                                                                id: Name("range"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        arguments: Arguments {
                                                            range: 37..40,
                                                            node_index: NodeIndex(None),
                                                            args: [
                                                                NumberLiteral(
                                                                    ExprNumberLiteral {
                                                                        node_index: NodeIndex(None),
                                                                        range: 38..39,
                                                                        value: Int(
                                                                            3,
                                                                        ),
                                                                    },
                                                                ),
                                                            ],
                                                            keywords: [],
                                                        },
                                                    },
                                                ),
                                                ifs: [],
                                                is_async: false,
                                            },
                                        ],
                                    },
                                ),
                            },
                        ),
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 46..87,
                                value: ListComp(
                                    ExprListComp {
                                        node_index: NodeIndex(None),
                                        range: 46..87,
                                        elt: Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 47..48,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                        generators: [
                                            Comprehension {
                                                range: 49..73,
                                                node_index: NodeIndex(None),
                                                target: Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 53..54,
                                                        id: Name("x"),
                                                        ctx: Store,
                                                    },
                                                ),
                                                iter: List(
                                                    ExprList {
                                                        node_index: NodeIndex(None),
                                                        range: 58..61,
                                                        elts: [
                                                            NumberLiteral(
                                                                ExprNumberLiteral {
                                                                    node_index: NodeIndex(None),
                                                                    range: 59..60,
                                                                    value: Int(
                                                                        1,
                                                                    ),
                                                                },
                                                            ),
                                                        ],
                                                        ctx: Load,
                                                    },
                                                ),
                                                ifs: [
                                                    Named(
                                                        ExprNamed {
                                                            node_index: NodeIndex(None),
                                                            range: 66..72,
                                                            target: Name(
                                                                ExprName {
                                                                    node_index: NodeIndex(None),
                                                                    range: 66..67,
                                                                    id: Name("y"),
                                                                    ctx: Store,
                                                                },
                                                            ),
                                                            value: Name(
                                                                ExprName {
                                                                    node_index: NodeIndex(None),
                                                                    range: 71..72,
                                                                    id: Name("x"),
                                                                    ctx: Load,
                                                                },
                                                            ),
                                                        },
                                                    ),
                                                ],
                                                is_async: false,
                                            },
                                            Comprehension {
                                                range: 74..86,
                                                node_index: NodeIndex(None),
                                                target: Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 78..79,
                                                        id: Name("y"),
                                                        ctx: Store,
                                                    },
                                                ),
                                                iter: List(
                                                    ExprList {
                                                        node_index: NodeIndex(None),
                                                        range: 83..86,
                                                        elts: [
                                                            NumberLiteral(
                                                                ExprNumberLiteral {
                                                                    node_index: NodeIndex(None),
                                                                    range: 84..85,
                                                                    value: Int(
                                                                        1,
                                                                    ),
                                                                },
                                                            ),
                                                        ],
                                                        ctx: Load,
                                                    },
                                                ),
                                                ifs: [],
                                                is_async: false,
                                            },
                                        ],
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Semantic Syntax Errors

  |
1 | class C:
2 |     [(x := y) for y in range(3)]
  |       ^^^^^^ Syntax Error: assignment expression within a comprehension cannot be used in a class body
3 |     [x for x in [1] if (y := x) for y in [1]]
  |


  |
1 | class C:
2 |     [(x := y) for y in range(3)]
3 |     [x for x in [1] if (y := x) for y in [1]]
  |                         ^^^^^^ Syntax Error: assignment expression within a comprehension cannot be used in a class body
  |
